force-app/main/default/objects/Quote/fields/API_Complement_Prix_Spot__c.field-meta.xml
<CustomField>
    <fullName>API_Complement_Prix_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API : Complément Prix Spot</label>
    <type>Checkbox</type>
</CustomField>