force-app/main/default/objects/Quote/fields/API_Contournement_Liasse_Fiscale__c.field-meta.xml
<CustomField>
    <fullName>API_Contournement_Liasse_Fiscale__c</fullName>
    <defaultValue>true</defaultValue>
    <label>API : Contournement Liasse Fiscale</label>
    <type>Checkbox</type>
</CustomField>