force-app/main/default/objects/Quote/fields/API_Date_demande__c.field-meta.xml
<CustomField>
    <fullName>API_Date_demande__c</fullName>
    <description>Horodatage de l&apos;envoi de la demande à l&apos;API fournisseur</description>
    <label>API : Date de la demande</label>
    <type>DateTime</type>
</CustomField>