force-app/main/default/objects/Quote/fields/API_Derogation_Penalites_Retard__c.field-meta.xml
<CustomField>
    <fullName>API_Derogation_Penalites_Retard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API : Dérogation Pénalités Retard</label>
    <type>Checkbox</type>
</CustomField>