force-app/main/default/objects/Quote/fields/Api_error_message__c.field-meta.xml
<CustomField>
    <fullName>Api_error_message__c</fullName>
    <label>Message d&apos;erreur API</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>