force-app/main/default/objects/Quote/fields/API_Formule_Prix__c.field-meta.xml
<CustomField>
    <fullName>API_Formule_Prix__c</fullName>
    <label>API : Formule Prix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>