force-app/main/default/objects/Quote/fields/API_Immatriculation_SDC__c.field-meta.xml
<CustomField>
    <fullName>API_Immatriculation_SDC__c</fullName>
    <label>API : Immatriculation SDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>