force-app/main/default/objects/Quote/fields/API_Marge_Choisie__c.field-meta.xml
<CustomField>
    <fullName>API_Marge_Choisie__c</fullName>
    <description>Montant de la marge choisie (€/MWh) lors d&apos;un appel aux API Fournisseurs</description>
    <label>API : Marge choisie</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>