force-app/main/default/objects/Quote/fields/API_Offre_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Offre_ID__c</fullName>
    <description>Id de l&apos;offre retourné par l&apos;API fournisseur</description>
    <label>API : Offre ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>