force-app/main/default/objects/Quote/fields/API_pE_Manuel__c.field-meta.xml
<CustomField>
    <fullName>API_pE_Manuel__c</fullName>
    <label>API : pE Manuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>