force-app/main/default/objects/Quote/fields/API_Prix_Horosaisonnier__c.field-meta.xml
<CustomField>
    <fullName>API_Prix_Horosaisonnier__c</fullName>
    <defaultValue>true</defaultValue>
    <label>API : Prix Horosaisonnier</label>
    <type>Checkbox</type>
</CustomField>