force-app/main/default/objects/Quote/fields/API_rE_Manuel__c.field-meta.xml
<CustomField>
    <fullName>API_rE_Manuel__c</fullName>
    <label>API : rE Manuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>