force-app/main/default/objects/Quote/fields/Api_status__c.field-meta.xml
<CustomField>
    <fullName>Api_status__c</fullName>
    <label>API Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande de prix reçue chez le fournisseur</fullName>
            </value>
            <value>
                <fullName>Demande de prix rejetée par le fournisseur</fullName>
            </value>
            <value>
                <fullName>Demande de prix validée par le fournisseur</fullName>
            </value>
            <value>
                <fullName>Erreur Process Mulesoft</fullName>
            </value>
            <value>
                <fullName>Demande de prix envoyée par Salesforce</fullName>
            </value>
            <value>
                <fullName>Demande de prix en attente d&apos;action manuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>