force-app/main/default/objects/Quote/fields/API_Taux_Garantie_Origine__c.field-meta.xml
<CustomField>
    <fullName>API_Taux_Garantie_Origine__c</fullName>
    <label>API : Taux Garantie Origine</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>