force-app/main/default/objects/Quote/fields/API_Type_Client__c.field-meta.xml
<CustomField>
    <fullName>API_Type_Client__c</fullName>
    <label>API : Type Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>