force-app/main/default/objects/Quote/fields/BudgetGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>BudgetGarantieOrigine__c</fullName>
    <formula>(PrixGarantieOrigine__c+MargeGarantieOrigine__c)*ConsoAnnuelleGarantieOrigine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>