force-app/main/default/objects/Quote/fields/Calcul_grille__c.field-meta.xml
<CustomField>
    <fullName>Calcul_grille__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calcul grille</label>
    <type>Checkbox</type>
</CustomField>