force-app/main/default/objects/Quote/fields/CAPA__c.field-meta.xml
<CustomField>
    <fullName>CAPA__c</fullName>
    <label>CAPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclus</fullName>
            </value>
            <value>
                <fullName>Non Inclus</fullName>
                <default>true</default>
                <label>Non Inclus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>