force-app/main/default/objects/Quote/fields/ConsoAnnuelleGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>ConsoAnnuelleGarantieOrigine__c</fullName>
    <label>Consommation annuelle (MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>