force-app/main/default/objects/Quote/fields/Date_Validite_Offre__c.field-meta.xml
<CustomField>
    <fullName>Date_Validite_Offre__c</fullName>
    <label>Date de validité de l&apos;offre</label>
    <type>DateTime</type>
</CustomField>