force-app/main/default/objects/Quote/fields/Date_Validite_Offre_API_Endesa_Elec__c.field-meta.xml
<CustomField>
    <fullName>Date_Validite_Offre_API_Endesa_Elec__c</fullName>
    <label>Date Validité Offre API Endesa Elec</label>
    <type>Date</type>
</CustomField>