force-app/main/default/objects/Quote/fields/DebutCouvertureGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>DebutCouvertureGarantieOrigine__c</fullName>
    <label>Début de Couverture</label>
    <type>Date</type>
</CustomField>