force-app/main/default/objects/Quote/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <label>Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclus</fullName>
            </value>
            <value>
                <fullName>Non inclus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>