force-app/main/default/objects/Quote/fields/Duree_offre_en_mois__c.field-meta.xml
<CustomField>
    <fullName>Duree_offre_en_mois__c</fullName>
    <formula>(YEAR(Maximum_date_de_fin__c) - YEAR(Minimum_date_de_debut__c)) * 12
+ (MONTH(Maximum_date_de_fin__c) - MONTH(Minimum_date_de_debut__c))
+ IF(
AND(
Maximum_date_de_fin__c = CASE(
MONTH(Maximum_date_de_fin__c),
1, DATE(YEAR(Maximum_date_de_fin__c), 1, 31),
2, IF(MOD(YEAR(Maximum_date_de_fin__c), 4) = 0, DATE(YEAR(Maximum_date_de_fin__c), 2, 29), DATE(YEAR(Maximum_date_de_fin__c), 2, 28)),
3, DATE(YEAR(Maximum_date_de_fin__c), 3, 31),
4, DATE(YEAR(Maximum_date_de_fin__c), 4, 30),
5, DATE(YEAR(Maximum_date_de_fin__c), 5, 31),
6, DATE(YEAR(Maximum_date_de_fin__c), 6, 30),
7, DATE(YEAR(Maximum_date_de_fin__c), 7, 31),
8, DATE(YEAR(Maximum_date_de_fin__c), 8, 31),
9, DATE(YEAR(Maximum_date_de_fin__c), 9, 30),
10, DATE(YEAR(Maximum_date_de_fin__c), 10, 31),
11, DATE(YEAR(Maximum_date_de_fin__c), 11, 30),
12, DATE(YEAR(Maximum_date_de_fin__c), 12, 31),
NULL
),
/* CONDITION SPECIFIQUE AU FOURNISSEUR POUR LE DEBUT DE MOIS */
OR(
AND(Fournisseur__c = &quot;Engie&quot;, DAY(Minimum_date_de_debut__c) = 1),
AND(Fournisseur__c = &quot;Gazel Energie&quot;, DAY(Minimum_date_de_debut__c) &lt;= 15)
)
),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de l&apos;offre (en mois)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>