force-app/main/default/objects/Quote/fields/EconomieIdentifiee__c.field-meta.xml
<CustomField>
    <fullName>EconomieIdentifiee__c</fullName>
    <description>Economie Identifiée suite au TURPE</description>
    <inlineHelpText>Economie Identifiée suite au TURPE</inlineHelpText>
    <label>Economie Identifiée (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>