force-app/main/default/objects/Quote/fields/Engie_demand_date__c.field-meta.xml
<CustomField>
    <fullName>Engie_demand_date__c</fullName>
    <label>Engie : date de la demande</label>
    <type>DateTime</type>
</CustomField>