force-app/main/default/objects/Quote/fields/Engie_green_energy__c.field-meta.xml
<CustomField>
    <fullName>Engie_green_energy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engie : énergie verte</label>
    <type>Checkbox</type>
</CustomField>