force-app/main/default/objects/Quote/fields/Engie_idSimulation__c.field-meta.xml
<CustomField>
    <fullName>Engie_idSimulation__c</fullName>
    <label>Engie : id Simulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>