force-app/main/default/objects/Quote/fields/Engie_idTransaction__c.field-meta.xml
<CustomField>
    <fullName>Engie_idTransaction__c</fullName>
    <label>Engie : id Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>