force-app/main/default/objects/Quote/fields/Engie_margin__c.field-meta.xml
<CustomField>
    <fullName>Engie_margin__c</fullName>
    <label>Engie : marge à partager (en €)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>