force-app/main/default/objects/Quote/fields/Engie_opp_name__c.field-meta.xml
<CustomField>
    <fullName>Engie_opp_name__c</fullName>
    <label>Engie : nom de l&apos;opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>