force-app/main/default/objects/Quote/fields/Engie_url_plateforme__c.field-meta.xml
<CustomField>
    <fullName>Engie_url_plateforme__c</fullName>
    <label>Engie : url plateforme</label>
    <type>Url</type>
</CustomField>