force-app/main/default/objects/Quote/fields/Engie_validity_duration__c.field-meta.xml
<CustomField>
    <fullName>Engie_validity_duration__c</fullName>
    <label>Engie : durée de validité (en jour)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>