force-app/main/default/objects/Quote/fields/FinCouvertureGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>FinCouvertureGarantieOrigine__c</fullName>
    <label>Fin de couverture</label>
    <type>Date</type>
</CustomField>