force-app/main/default/objects/Quote/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <label>Fournisseur</label>
    <length>100</length>
    <type>Text</type>
</CustomField>