force-app/main/default/objects/Quote/fields/Frais_Distribution_Variable__c.field-meta.xml
<CustomField>
    <fullName>Frais_Distribution_Variable__c</fullName>
    <label>Frais Distribution Variable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclus</fullName>
            </value>
            <value>
                <fullName>Non Inclus</fullName>
                <default>true</default>
                <label>Non Inclus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>