force-app/main/default/objects/Quote/fields/IsGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>IsGarantieOrigine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantie d&apos;Origine ?</label>
    <type>Checkbox</type>
</CustomField>