force-app/main/default/objects/Quote/fields/IsOptimisationTURPE__c.field-meta.xml
<CustomField>
    <fullName>IsOptimisationTURPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimisation TURPE ?</label>
    <type>Checkbox</type>
</CustomField>