force-app/main/default/objects/Quote/fields/Marge_Mwh_T1__c.field-meta.xml
<CustomField>
    <fullName>Marge_Mwh_T1__c</fullName>
    <label>Marge globale €/Mwh T1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>