force-app/main/default/objects/Quote/fields/MargeGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>MargeGarantieOrigine__c</fullName>
    <label>Marge (€HT/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>