force-app/main/default/objects/Quote/fields/MargeInterventionPEPS__c.field-meta.xml
<CustomField>
    <fullName>MargeInterventionPEPS__c</fullName>
    <label>Marge intervention PEPS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>