force-app/main/default/objects/Quote/fields/Maximum_date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Maximum_date_de_fin__c</fullName>
    <label>Maximum date de fin</label>
    <summarizedField>QuoteLineItem.Nouvelle_Echeance__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>