force-app/main/default/objects/Quote/fields/Minimum_date_de_debut__c.field-meta.xml
<CustomField>
    <fullName>Minimum_date_de_debut__c</fullName>
    <label>Minimum date de début</label>
    <summarizedField>QuoteLineItem.DebutDeFourniture__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>