force-app/main/default/objects/Quote/fields/Numero_Offre_API_Endesa_Elec__c.field-meta.xml
<CustomField>
    <fullName>Numero_Offre_API_Endesa_Elec__c</fullName>
    <label>Numero Offre API Endesa Elec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>