force-app/main/default/objects/Quote/fields/OrigineGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>OrigineGarantieOrigine__c</fullName>
    <label>Origine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Européenne</fullName>
            </value>
            <value>
                <fullName>Française</fullName>
            </value>
            <value>
                <fullName>Régionale</fullName>
            </value>
            <value>
                <fullName>Départementale</fullName>
            </value>
            <value>
                <fullName>Communale</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>