force-app/main/default/objects/Quote/fields/PrixGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>PrixGarantieOrigine__c</fullName>
    <label>Prix de la garantie d&apos;origine (€HT/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>