force-app/main/default/objects/Quote/fields/Remuneration__c.field-meta.xml
<CustomField>
    <fullName>Remuneration__c</fullName>
    <label>Rémunération</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>