force-app/main/default/objects/Quote/fields/Status_Offre_API_Endesa_Elec__c.field-meta.xml
<CustomField>
    <fullName>Status_Offre_API_Endesa_Elec__c</fullName>
    <label>Status Offre API Endesa Elec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>