force-app/main/default/objects/Quote/fields/SumBudgetTotalActuel__c.field-meta.xml
<CustomField>
    <fullName>SumBudgetTotalActuel__c</fullName>
    <description>Somme des BudgetTotalActuel__c des QLI liés</description>
    <inlineHelpText>Somme des BudgetTotalActuel__c des QLI liés</inlineHelpText>
    <label>Budget Total Actuel (€HT/an)</label>
    <summarizedField>QuoteLineItem.BudgetTotalActuel__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>