force-app/main/default/objects/Quote/fields/SumBudgetTotalOptimal__c.field-meta.xml
<CustomField>
    <fullName>SumBudgetTotalOptimal__c</fullName>
    <description>Somme des BudgetTotalOptimal__c des QLI liés</description>
    <inlineHelpText>Somme des BudgetTotalOptimal__c des QLI liés</inlineHelpText>
    <label>Budget Total Optimal (€HT/an)</label>
    <summarizedField>QuoteLineItem.BudgetTotalOptimal__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>