force-app/main/default/objects/Quote/fields/SumEconomieIdentifiee__c.field-meta.xml
<CustomField>
    <fullName>SumEconomieIdentifiee__c</fullName>
    <description>Somme des EconomieIdentifie__c des QLI liés</description>
    <inlineHelpText>Somme des EconomieIdentifie__c des QLI liés</inlineHelpText>
    <label>Économie Totale Identifiée</label>
    <summarizedField>QuoteLineItem.EconomieIdentifieNet__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>