force-app/main/default/objects/Quote/fields/TECH_AccountRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccountRecordTypeName__c</fullName>
    <formula>Opportunity.Account.RecordType.Name</formula>
    <label>Account RecordTypeName</label>
    <type>Text</type>
</CustomField>