force-app/main/default/objects/Quote/fields/TECH_Enchere_capacite__c.field-meta.xml
<CustomField>
    <fullName>TECH_Enchere_capacite__c</fullName>
    <formula>$CustomMetadata.Enchere_de_capacite__mdt.Enchere_de_capacite.Montant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Enchere_capacite</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>