force-app/main/default/objects/Quote/fields/TECH_OppId_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>TECH_OppId_fournisseur__c</fullName>
    <description>Ce champs permet d&apos;identifier précisément une quote</description>
    <formula>if(TECH_PropositionRenouvellement__c,&apos;PROPOSITION_RENOUVELLEMENT&apos;,if(Tech_situationActuelle__c,&apos;SITUATION_ACTUELLE&apos;,CASESAFEID(OpportunityId)+&apos;_&apos;+Fournisseur__c))</formula>
    <label>TECH OppId fournisseur</label>
    <type>Text</type>
</CustomField>