force-app/main/default/objects/Quote/fields/TECH_OppRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>TECH_OppRecordTypeName__c</fullName>
    <formula>Opportunity.RecordType.Name</formula>
    <label>Opp RecordTypeName</label>
    <type>Text</type>
</CustomField>