force-app/main/default/objects/Quote/fields/TECH_PropositionRenouvellement__c.field-meta.xml
<CustomField>
    <fullName>TECH_PropositionRenouvellement__c</fullName>
    <formula>CONTAINS(Name,&apos;PROPOSITION DE RENOUVELLEMENT&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Proposition De Renouvellement</label>
    <type>Checkbox</type>
</CustomField>