force-app/main/default/objects/Quote/fields/Tech_situationActuelle__c.field-meta.xml
<CustomField>
    <fullName>Tech_situationActuelle__c</fullName>
    <formula>CONTAINS(Name,&apos;SITUATION ACTUELLE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech situation actuelle</label>
    <type>Checkbox</type>
</CustomField>