force-app/main/default/objects/Quote/fields/TechnologieGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>TechnologieGarantieOrigine__c</fullName>
    <label>Technologie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eolien</fullName>
            </value>
            <value>
                <fullName>Hydraulique</fullName>
            </value>
            <value>
                <fullName>Photovoltaïque</fullName>
            </value>
            <value>
                <fullName>BioGAZ</fullName>
            </value>
            <value>
                <fullName>Biométhane</fullName>
            </value>
            <value>
                <fullName>BioGNV</fullName>
            </value>
            <value>
                <fullName>Cogénération</fullName>
            </value>
            <value>
                <fullName>Tout confondu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>