force-app/main/default/objects/Quote/fields/TotalBudgetGazNaturelHTVA__c.field-meta.xml
<CustomField>
    <fullName>TotalBudgetGazNaturelHTVA__c</fullName>
    <label>Total Budget Gaz naturel HTVA</label>
    <summarizedField>QuoteLineItem.TECH_BudgetGaz__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>