force-app/main/default/objects/Quote/fields/TotalBudgetHTT__c.field-meta.xml
<CustomField>
    <fullName>TotalBudgetHTT__c</fullName>
    <label>Total Budget HTT(€/an)</label>
    <summarizedField>QuoteLineItem.BudgetHTTan__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>