force-app/main/default/objects/Quote/fields/TotalBudgetTTC__c.field-meta.xml
<CustomField>
    <fullName>TotalBudgetTTC__c</fullName>
    <label>Total Budget TTC</label>
    <summarizedField>QuoteLineItem.Budget_TTC__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>