force-app/main/default/objects/Quote/fields/TURPE__c.field-meta.xml
<CustomField>
    <fullName>TURPE__c</fullName>
    <label>TURPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclus</fullName>
            </value>
            <value>
                <fullName>Non inclus</fullName>
                <default>true</default>
                <label>Non inclus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>