force-app/main/default/objects/Quote/fields/TypeOffre__c.field-meta.xml
<CustomField>
    <fullName>TypeOffre__c</fullName>
    <label>Type d&apos;Offre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRIX FIXE</fullName>
                <default>true</default>
                <label>PRIX FIXE</label>
            </value>
            <value>
                <fullName>ARENH</fullName>
            </value>
            <value>
                <fullName>ARENH AVEC ÉCRÊTEMENT</fullName>
            </value>
            <value>
                <fullName>ARENH SANS ÉCRÊTEMENT</fullName>
            </value>
            <value>
                <fullName>PEG</fullName>
            </value>
            <value>
                <fullName>TRV</fullName>
            </value>
            <value>
                <fullName>SWAP ARENH</fullName>
                <isActive>false</isActive>
                <label>SWAP ARENH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>