force-app/main/default/objects/Quote/fields/url_offre_endesa__c.field-meta.xml
<CustomField>
    <fullName>url_offre_endesa__c</fullName>
    <description>Lien vers l&apos;offre Endesa</description>
    <label>Lien offre Endesa</label>
    <type>Url</type>
</CustomField>