force-app/main/default/objects/Quote/recordTypes/Quote_Elec.recordType-meta.xml
<RecordType>
    <fullName>Quote_Elec</fullName>
    <active>true</active>
    <label>Elec</label>
</RecordType>