force-app/main/default/objects/Quote/recordTypes/Quote_Gaz.recordType-meta.xml
<RecordType>
    <fullName>Quote_Gaz</fullName>
    <active>true</active>
    <label>Gaz</label>
</RecordType>